--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -65,9 +65,8 @@
        "      <th>indicator</th>\n",
        "      <th>period</th>\n",
        "      <th>dhis2_value</th>\n",
-       "      <th>other</th>\n",
+       "      <th>datim_value</th>\n",
        "      <th>gender</th>\n",
-       "      <th>short_indicator_name</th>\n",
        "      <th>age</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -84,8 +83,7 @@
        "      <td>2019Q4</td>\n",
        "      <td>33</td>\n",
        "      <td>87.0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>tested</td>\n",
+       "      <td>(F)</td>\n",
        "      <td>20-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -100,8 +98,7 @@
        "      <td>2020Q1</td>\n",
        "      <td>14</td>\n",
        "      <td>13.0</td>\n",
-       "      <td>n</td>\n",
-       "      <td>tested</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1-9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -116,8 +113,7 @@
        "      <td>2019Q4</td>\n",
        "      <td>15</td>\n",
        "      <td>53.0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>tested</td>\n",
+       "      <td>(F)</td>\n",
        "      <td>20-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -132,8 +128,7 @@
        "      <td>2020Q2</td>\n",
        "      <td>9</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>male</td>\n",
-       "      <td>tested</td>\n",
+       "      <td>(M)</td>\n",
        "      <td>20-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -148,8 +143,7 @@
        "      <td>2019Q4</td>\n",
        "      <td>7</td>\n",
        "      <td>39.0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>tested</td>\n",
+       "      <td>(F)</td>\n",
        "      <td>15-19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -164,35 +158,35 @@
        "3  aWpElDmioIw     Kuja Dispensary  13724  North sakwa Ward   \n",
        "4  aWpElDmioIw     Kuja Dispensary  13724  North sakwa Ward   \n",
        "\n",
-       "          sub_county         county    indicator  period  dhis2_value  other  \\\n",
-       "0  Awendo Sub County  Migori County  JiuqbydCIcy  2019Q4           33   87.0   \n",
-       "1  Awendo Sub County  Migori County  OePJt8CcZ0d  2020Q1           14   13.0   \n",
-       "2  Awendo Sub County  Migori County  JiuqbydCIcy  2019Q4           15   53.0   \n",
-       "3  Awendo Sub County  Migori County  pkShOkgNQt2  2020Q2            9   10.0   \n",
-       "4  Awendo Sub County  Migori County  YXJf27jfkvS  2019Q4            7   39.0   \n",
+       "          sub_county         county    indicator  period  dhis2_value  \\\n",
+       "0  Awendo Sub County  Migori County  JiuqbydCIcy  2019Q4           33   \n",
+       "1  Awendo Sub County  Migori County  OePJt8CcZ0d  2020Q1           14   \n",
+       "2  Awendo Sub County  Migori County  JiuqbydCIcy  2019Q4           15   \n",
+       "3  Awendo Sub County  Migori County  pkShOkgNQt2  2020Q2            9   \n",
+       "4  Awendo Sub County  Migori County  YXJf27jfkvS  2019Q4            7   \n",
        "\n",
-       "   gender short_indicator_name    age  \n",
-       "0  female               tested  20-24  \n",
-       "1       n               tested    1-9  \n",
-       "2  female               tested  20-24  \n",
-       "3    male               tested  20-24  \n",
-       "4  female               tested  15-19  "
+       "   datim_value gender    age  \n",
+       "0         87.0    (F)  20-24  \n",
+       "1         13.0    NaN    1-9  \n",
+       "2         53.0    (F)  20-24  \n",
+       "3         10.0    (M)  20-24  \n",
+       "4         39.0    (F)  15-19  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hts = pd.read_csv(\"./clean_data/hts_cleaned.csv\")\n",
-    "pmtct = pd.read_csv(\"./clean_data/pmtct_merged.csv\")\n",
+    "hts = pd.read_csv(\"./clean_data/clean_hts.csv\")\n",
+    "pmtct = pd.read_csv(\"./clean_data/merged_pmtct.csv\")\n",
     "hts.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -206,24 +200,23 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 6992 entries, 0 to 6991\n",
-      "Data columns (total 13 columns):\n",
-      " #   Column                Non-Null Count  Dtype  \n",
-      "---  ------                --------------  -----  \n",
-      " 0   facilityuid           6992 non-null   object \n",
-      " 1   facility              6992 non-null   object \n",
-      " 2   code                  6992 non-null   int64  \n",
-      " 3   ward                  6992 non-null   object \n",
-      " 4   sub_county            6992 non-null   object \n",
-      " 5   county                6992 non-null   object \n",
-      " 6   indicator             6992 non-null   object \n",
-      " 7   period                6992 non-null   object \n",
-      " 8   dhis2_value           6992 non-null   int64  \n",
-      " 9   other                 6881 non-null   float64\n",
-      " 10  gender                6992 non-null   object \n",
-      " 11  short_indicator_name  6992 non-null   object \n",
-      " 12  age                   6992 non-null   object \n",
-      "dtypes: float64(1), int64(2), object(10)\n",
-      "memory usage: 710.2+ KB\n"
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   facilityuid  6992 non-null   object \n",
+      " 1   facility     6992 non-null   object \n",
+      " 2   code         6992 non-null   int64  \n",
+      " 3   ward         6992 non-null   object \n",
+      " 4   sub_county   6992 non-null   object \n",
+      " 5   county       6992 non-null   object \n",
+      " 6   indicator    6992 non-null   object \n",
+      " 7   period       6992 non-null   object \n",
+      " 8   dhis2_value  6992 non-null   int64  \n",
+      " 9   datim_value  6881 non-null   float64\n",
+      " 10  gender       6232 non-null   object \n",
+      " 11  age          6992 non-null   object \n",
+      "dtypes: float64(1), int64(2), object(9)\n",
+      "memory usage: 655.6+ KB\n"
      ]
     }
    ],
@@ -233,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -264,7 +257,7 @@
        "      <th></th>\n",
        "      <th>code</th>\n",
        "      <th>dhis2_value</th>\n",
-       "      <th>other</th>\n",
+       "      <th>datim_value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -321,7 +314,7 @@
        "</div>"
       ],
       "text/plain": [
-       "               code  dhis2_value        other\n",
+       "               code  dhis2_value  datim_value\n",
        "count   6992.000000  6992.000000  6881.000000\n",
        "mean   15702.614130    34.188787    42.684348\n",
        "std     1796.601517    74.502902    77.882341\n",
@@ -332,7 +325,7 @@
        "max    24341.000000  2667.000000  2439.000000"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -354,23 +347,22 @@
     {
      "data": {
       "text/plain": [
-       "facilityuid               0\n",
-       "facility                  0\n",
-       "code                      0\n",
-       "ward                      0\n",
-       "sub_county                0\n",
-       "county                    0\n",
-       "indicator                 0\n",
-       "period                    0\n",
-       "dhis2_value               0\n",
-       "other                   111\n",
-       "gender                    0\n",
-       "short_indicator_name      0\n",
-       "age                       0\n",
+       "facilityuid      0\n",
+       "facility         0\n",
+       "code             0\n",
+       "ward             0\n",
+       "sub_county       0\n",
+       "county           0\n",
+       "indicator        0\n",
+       "period           0\n",
+       "dhis2_value      0\n",
+       "datim_value    111\n",
+       "gender         760\n",
+       "age              0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -639,7 +631,7 @@
        "[1432 rows x 11 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -677,7 +669,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -727,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -874,7 +866,7 @@
        "4        191.0  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -984,7 +976,7 @@
        "max    20684.000000   588.000000   581.000000"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1034,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1073,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1172,7 +1164,7 @@
        "max    20684.000000   588.000000   581.000000"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1441,7 +1433,7 @@
        "[1432 rows x 11 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1492,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1627,7 +1619,7 @@
        "[821 rows x 4 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1639,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1774,7 +1766,7 @@
        "[821 rows x 4 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1786,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1933,7 +1925,7 @@
        "[821 rows x 5 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1945,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -2117,7 +2109,7 @@
        "[821 rows x 6 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2129,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -2206,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -2330,7 +2322,7 @@
        "[821 rows x 2 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2342,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -2477,7 +2469,7 @@
        "[821 rows x 4 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2489,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -2685,7 +2677,7 @@
        "[821 rows x 8 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2697,7 +2689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false,
     "pycharm": {
