update all files

--- a/manipulation.ipynb
+++ b/manipulation.ipynb
@@ -2,150 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 455,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>facilityuid</th>\n",
-       "      <th>facility</th>\n",
-       "      <th>code</th>\n",
-       "      <th>ward</th>\n",
-       "      <th>sub_county</th>\n",
-       "      <th>county</th>\n",
-       "      <th>indicator</th>\n",
-       "      <th>period</th>\n",
-       "      <th>dhis2_value</th>\n",
-       "      <th>datim_value</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>aCOEeeYEcsO</td>\n",
-       "      <td>Rabondo Dispensary</td>\n",
-       "      <td>14019</td>\n",
-       "      <td>West sakwa Ward</td>\n",
-       "      <td>Awendo Sub County</td>\n",
-       "      <td>Migori County</td>\n",
-       "      <td>JiuqbydCIcy</td>\n",
-       "      <td>2019Q4</td>\n",
-       "      <td>33</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>(F)</td>\n",
-       "      <td>20-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>aWpElDmioIw</td>\n",
-       "      <td>Kuja Dispensary</td>\n",
-       "      <td>13724</td>\n",
-       "      <td>North sakwa Ward</td>\n",
-       "      <td>Awendo Sub County</td>\n",
-       "      <td>Migori County</td>\n",
-       "      <td>JiuqbydCIcy</td>\n",
-       "      <td>2019Q4</td>\n",
-       "      <td>15</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>(F)</td>\n",
-       "      <td>20-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>aWpElDmioIw</td>\n",
-       "      <td>Kuja Dispensary</td>\n",
-       "      <td>13724</td>\n",
-       "      <td>North sakwa Ward</td>\n",
-       "      <td>Awendo Sub County</td>\n",
-       "      <td>Migori County</td>\n",
-       "      <td>pkShOkgNQt2</td>\n",
-       "      <td>2020Q2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>(M)</td>\n",
-       "      <td>20-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>aWpElDmioIw</td>\n",
-       "      <td>Kuja Dispensary</td>\n",
-       "      <td>13724</td>\n",
-       "      <td>North sakwa Ward</td>\n",
-       "      <td>Awendo Sub County</td>\n",
-       "      <td>Migori County</td>\n",
-       "      <td>YXJf27jfkvS</td>\n",
-       "      <td>2019Q4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>(F)</td>\n",
-       "      <td>15-19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>B8Y8xuk4MFf</td>\n",
-       "      <td>Ngo'nga Dispensary</td>\n",
-       "      <td>17052</td>\n",
-       "      <td>South sakwa Ward</td>\n",
-       "      <td>Awendo Sub County</td>\n",
-       "      <td>Migori County</td>\n",
-       "      <td>gMICOUtzqRb</td>\n",
-       "      <td>2019Q4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>(F)</td>\n",
-       "      <td>10-14</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   facilityuid            facility   code              ward  \\\n",
-       "0  aCOEeeYEcsO  Rabondo Dispensary  14019   West sakwa Ward   \n",
-       "1  aWpElDmioIw     Kuja Dispensary  13724  North sakwa Ward   \n",
-       "2  aWpElDmioIw     Kuja Dispensary  13724  North sakwa Ward   \n",
-       "3  aWpElDmioIw     Kuja Dispensary  13724  North sakwa Ward   \n",
-       "4  B8Y8xuk4MFf  Ngo'nga Dispensary  17052  South sakwa Ward   \n",
-       "\n",
-       "          sub_county         county    indicator  period  dhis2_value  \\\n",
-       "0  Awendo Sub County  Migori County  JiuqbydCIcy  2019Q4           33   \n",
-       "1  Awendo Sub County  Migori County  JiuqbydCIcy  2019Q4           15   \n",
-       "2  Awendo Sub County  Migori County  pkShOkgNQt2  2020Q2            9   \n",
-       "3  Awendo Sub County  Migori County  YXJf27jfkvS  2019Q4            7   \n",
-       "4  Awendo Sub County  Migori County  gMICOUtzqRb  2019Q4            3   \n",
-       "\n",
-       "   datim_value gender    age  \n",
-       "0         87.0    (F)  20-24  \n",
-       "1         53.0    (F)  20-24  \n",
-       "2         10.0    (M)  20-24  \n",
-       "3         39.0    (F)  15-19  \n",
-       "4          5.0    (F)  10-14  "
-      ]
-     },
-     "execution_count": 428,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6232 entries, 0 to 6231\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   facilityuid  6232 non-null   object \n",
+      " 1   facility     6232 non-null   object \n",
+      " 2   code         6232 non-null   int64  \n",
+      " 3   ward         6232 non-null   object \n",
+      " 4   sub_county   6232 non-null   object \n",
+      " 5   county       6232 non-null   object \n",
+      " 6   indicator    6232 non-null   object \n",
+      " 7   period       6232 non-null   object \n",
+      " 8   dhis2_value  6232 non-null   int64  \n",
+      " 9   datim_value  6232 non-null   float64\n",
+      " 10  gender       6232 non-null   object \n",
+      " 11  age          6232 non-null   object \n",
+      "dtypes: float64(1), int64(2), object(9)\n",
+      "memory usage: 584.4+ KB\n"
+     ]
     }
    ],
    "source": [
@@ -156,7 +39,7 @@
     "pmtct_df = pd.read_csv('./clean_data/merged_pmtct.csv')\n",
     "\n",
     "# hts_merged = pd.concat([hts_migori, hts_kakamega], ignore_index=True)\n",
-    "hts_df.head()"
+    "hts_df.info()"
    ]
   },
   {
