--- a/pandas_cleaning.ipynb
+++ b/pandas_cleaning.ipynb
@@ -1345,6 +1345,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'facility'"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pmtct_merged.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 192,
    "metadata": {},
    "outputs": [],
